# Mr-Robot_discord-bot

./: .gitignore  README.md  Status.inf  bot.py  bot1.py  bot2.py  bot_generator.py  greeting_channel.json  main.py  pyproject.toml  requirements.txt  webserver.py
Cogs/: anti_abusive.py  command_error_handling.py  fun.py  greeting.py  join_alert.py  misc.py  moderation.py  music.py  os_cmd.py  status.py  translate.py
Logs/: error
