[tool.poetry]
name = "repl_python3_discord-bots-2"
version = "0.1.0"
description = ""
authors = ["ittejas2004 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
praw = "^7.6.0"
youtube_dl = "^2021.12.17"
disnake = "^2.5.1"
PyNaCl = "^1.5.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
