[tool.poetry]
name = "repl_python3_discord-bots-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.1"
python-dotenv = "^0.20.0"
youtube_dl = "^2021.12.17"
aiohttp = "^3.8.1"
Flask = "^2.2.2"
googletrans = "^3.0.0"
disnake = "^2.5.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
